JavaCC/practica2.java
/* practica2.java */
/* Generated By:JavaCC: Do not edit this line. practica2.java */
public class practica2 implements practica2Constants {

        //Declaración de variables
        static private int lbl = -1;
        static private int endif = 0;

        //Funciones para obtener el numero de etiqueta
        private static int obtenerSiguienteLBL() {
                return ++lbl;
        }
        private static int obtenerLBL() {
                return lbl;
        }

        //Funciones para obtener el numero de etiqueta al finalizar un IF
        private static int obtenerSiguienteEndIf() {
                endif = obtenerSiguienteLBL();
                return endif;
        }
        private static int obtenerEndIf() {
                return endif;
        }

        //Función main del programa
        public static void main (String[] args) throws Exception {
                if(args.length == 0){   //Entrada por pantalla
                        practica2 parser = new practica2(System.in);
                        parser.programa();
                }else{                  //Entrada mediante fichero
                        practica2 parser = new practica2(new java.io.FileInputStream(args[0]));
                        parser.programa();

                }
        }

/* GRAMÁTICA */
  static final public 
void programa() throws ParseException {
    stmts();
    jj_consume_token(0);
}

/* No terminal 	: stmts
 * Producciones	: stmts -> stmt ';' stmts | stmt
 * Return	: void
 */
  static final public void stmts() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:
    case PRINT:
    case READ:
    case DO:
    case FOR:
    case ID:{
      stmt();
      jj_consume_token(18);
      stmts();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
}

/* No terminal : stmt
 * Producciones : stmt -> loop | cond | assig | io
 * Return : void
 */
  static final public void stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DO:
    case FOR:{
      loop();
      break;
      }
    case IF:{
      cond();
      break;
      }
    case ID:{
      assig();
      break;
      }
    case PRINT:
    case READ:{
      io();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/* No terminal : loop
 * Producciones : loop -> 'do' stmts 'while' '(' expr ')'
 *              | 'for' '(' ID 'from' expr 'to' NUM ')' '{' stmts '}'
 *              | 'for' '(' ID 'from' expr 'to' NUM 'by' NUM ')' '{' stmts '}'
 * Return : void
 */
  static final public void loop() throws ParseException {Token tk;
    int etiqueta_inicio, etiqueta_fin;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DO:{
      tk = jj_consume_token(DO);
etiqueta_inicio = obtenerSiguienteLBL();
            etiqueta_fin = obtenerSiguienteLBL();
            System.out.println("LBL" + etiqueta_inicio);
      stmts();
      tk = jj_consume_token(WHILE);
      jj_consume_token(OPAR);
      expr();
      jj_consume_token(CPAR);
System.out.println("\tsifalsovea LBL" + etiqueta_fin);
System.out.println("\tvea LBL" + etiqueta_inicio);
            System.out.println("LBL" + etiqueta_fin);
      break;
      }
    case FOR:{
      tk = jj_consume_token(FOR);
      jj_consume_token(OPAR);
      tk = jj_consume_token(ID);
      jj_consume_token(19);
      expr();
      jj_consume_token(20);
      tk = jj_consume_token(NUM);
      jj_consume_token(CPAR);
      jj_consume_token(21);
etiqueta_inicio = obtenerSiguienteLBL();
            etiqueta_fin = obtenerSiguienteLBL();
            System.out.println("LBL" + etiqueta_inicio);
      stmts();
      jj_consume_token(22);
System.out.println("\tvalori " + tk.image.toString);
            System.out.println("\tasigna");
            System.out.println("\tsalto LBL" + etiqueta_fin);
            System.out.println("LBL" + etiqueta_fin);
      break;
      }{
      tk = jj_consume_token(FOR);
      jj_consume_token(OPAR);
      tk = jj_consume_token(ID);
      jj_consume_token(19);
      expr();
      jj_consume_token(20);
      tk = jj_consume_token(NUM);
      jj_consume_token(23);
      tk = jj_consume_token(NUM);
      jj_consume_token(CPAR);
      jj_consume_token(21);
etiqueta_inicio = obtenerSiguienteLBL();
            etiqueta_fin = obtenerSiguienteLBL();
            System.out.println("LBL" + etiqueta_inicio);
      stmts();
      jj_consume_token(22);
System.out.println("\tvalori " + tk.image.toString);
            System.out.println("\tvalord " + tk.image.toString);
            System.out.println("\tvalori " + tk.image.toString);
            System.out.println("\tsub");
            System.out.println("\tvalori " + tk.image.toString);
            System.out.println("\tmen");
            System.out.println("\tvalori 0");
            System.out.println("\tsifalsovea LBL" + etiqueta_fin);
            System.out.println("\tasigna");
            System.out.println("\tsalto LBL" + etiqueta_inicio);
            System.out.println("LBL" + etiqueta_fin);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/* No terminal : cond
 * Producciones : cond -> 'if' '(' expr ')' '{' stmts '}'
 *              | 'if' '(' expr ')' '{' stmts '}' 'else' '{' stmts '}'
 * Return : void
 */
  static final public void cond() throws ParseException {Token tk;
    int etiqueta_fin_if = obtenerSiguienteEndIf();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:{
      tk = jj_consume_token(IF);
      jj_consume_token(OPAR);
      expr();
      jj_consume_token(CPAR);
      jj_consume_token(21);
System.out.println("\tsifalsovea LBL" + etiqueta_fin_if);
      stmts();
      jj_consume_token(22);
System.out.println("\tvea LBL" + etiqueta_fin_if);
      break;
      }{
      tk = jj_consume_token(IF);
      jj_consume_token(OPAR);
      expr();
      jj_consume_token(CPAR);
      jj_consume_token(21);
      stmts();
      jj_consume_token(22);
      tk = jj_consume_token(ELSE);
      jj_consume_token(21);
      stmts();
      jj_consume_token(22);
System.out.println("\tsalto LBL" + etiqueta_fin_if);
            System.out.println("\tvea LBL" + etiqueta_fin_if);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/* No terminal 	: io
 * Terminales	: <PRINT>, <READ>
 * Producciones	: io -> PRINT expr | READ ID
 * Return	: void
 */
  static final public void io() throws ParseException {Token tk;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:{
      tk = jj_consume_token(PRINT);
      expr();
System.out.println("\tprint");
      break;
      }
    case READ:{
      tk = jj_consume_token(READ);
      jj_consume_token(ID);
System.out.println("\tread " + tk.image.toString);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/* No terminal 	: assig
 * Terminales	: <ID>, "=", "+=", "-=", "*=", "/="
 * Producciones	: assig -> ID '<:' expr | ID '+=' expr | ID '-=' expr | ID '*=' expr | ID '/=' expr
 * Return	: void
 */
  static final public void assig() throws ParseException {Token tk;
    tk = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 24:{
      jj_consume_token(24);
System.out.println("\tvalori " + tk.image.toString);
      expr();
System.out.println("\tasigna");
      break;
      }
    case 25:{
      jj_consume_token(25);
System.out.println("\tvalori " + tk.image.toString + "\n\tvalord " + tk.image.toString);
      expr();
System.out.println("\n\tadd" + "\n\tasigna");
      break;
      }
    case 26:{
      jj_consume_token(26);
System.out.println("\tvalori " + tk.image.toString + "\n\tvalord " + tk.image.toString);
      expr();
System.out.println("\n\tsub" + "\n\tasigna");
      break;
      }
    case 27:{
      jj_consume_token(27);
System.out.println("\tvalori " + tk.image.toString + "\n\tvalord " + tk.image.toString);
      expr();
System.out.println("\n\tmul" + "\n\tasigna");
      break;
      }
    case 28:{
      jj_consume_token(28);
System.out.println("\tvalori " + tk.image.toString + "\n\tvalord " + tk.image.toString);
      expr();
System.out.println("\n\tdiv" + "\n\tasigna");
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/* No terminal : expr
 * Producciones : expr -> expr '+' mult | expr '-' mult | mult
 * Return : void
 */
  static final public void expr() throws ParseException {
    mult();
    expr1();
}

/* No terminal : expr1
 * Terminales : "+", "-"
 * Producciones : expr1 -> '+' mult expr1 | '-' mult expr1 | ε
 * Return : void
 */
  static final public void expr1() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 29:
      case 30:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 29:{
        jj_consume_token(29);
        mult();
System.out.println("\tsum");
        break;
        }
      case 30:{
        jj_consume_token(30);
        mult();
System.out.println("\tsub");
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

/* No terminal : mult
 * Producciones : mult -> val mult1 | val
 * Return : void
 */
  static final public void mult() throws ParseException {
    val();
    mult1();
}

/* No terminal : mult1
 * Terminales : "*", "/"
 * Producciones : mult1 -> '*' val mult1 | '/' val mult1 | ε
 * Return : void
 */
  static final public void mult1() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:
      case 32:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:{
        jj_consume_token(31);
        val();
System.out.println("\tmul");
        break;
        }
      case 32:{
        jj_consume_token(32);
        val();
System.out.println("\tdiv");
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

/* No terminal : val
 * Producciones : val -> NUM | ID | '(' expr ')'
 * Return : void
 */
  static final public void val() throws ParseException {Token tk;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      tk = jj_consume_token(NUM);
System.out.println("\tmete " + tk.image.toString);
      break;
      }
    case ID:{
      tk = jj_consume_token(ID);
System.out.println("\tvalord " + tk.image.toString);
      break;
      }
    case OPAR:{
      jj_consume_token(OPAR);
      expr();
      jj_consume_token(CPAR);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public practica2TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x29c20,0x29c20,0x9000,0x20,0xc00,0x1f000000,0x60000000,0x60000000,0x80000000,0x80000000,0x32000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1,0x1,0x0,};
	}

  /** Constructor with InputStream. */
  public practica2(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public practica2(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new practica2TokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public practica2(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new practica2TokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new practica2TokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public practica2(practica2TokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(practica2TokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[33];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 11; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 33; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
